# k8s-demo

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  GitVersion.yml  Makefile  README.md  ci.env  docker-compose.yml
.github/workflows/: backend-ci.yml  candidate.yml  ci.yml  docker-image.yml  frontend-ci.yml  gitops.yml  promote.yml  release.yml  versioning.yml
app/backend/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/backend/app/: db.py  main.py  version.py
app/backend/app/models/: task.py
app/backend/app/routes/: tasks.py
app/backend/app/schemas/: task.py
app/backend/app/storage/: memory.py  postgres.py
app/frontend/: .dockerignore  Dockerfile  Makefile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
ops/argocd/: app-dev.yaml  app-prod.yaml  application.yaml
ops/argocd/scripts/: argocd-install.sh  argocd-uninstall.sh
ops/compose/: docker-compose.yml
ops/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
ops/helm/k8s-demo/: Chart.yaml  values.yaml
ops/helm/templates/: backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  frontend-configmap.yaml  ingress-backend.yaml  ingress-frontend.yaml  postgres-deployment.yaml  postgres-secret.yaml
ops/k8s/: ingress-backend.yaml  ingress-frontend.yaml
ops/k8s/backend/: configmap.yaml  deployment.yaml  secret.yaml  (+1 more)
ops/kind/: config.yaml
scripts/: argocd-install.sh  argocd-uninstall.sh  helm-down.sh  helm-reset.sh  helm-up.sh  k8s-down.sh  k8s-reset.sh  k8s-status.sh  k8s-up.sh
(+28 files in other folders)
