[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k8s-demo-backend"
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "psycopg[binary]",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
